--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>service0</module>
         <module>service1</module>
         <module>client</module>
+        <module>cloud_config</module>
     </modules>
 
     <parent>
