init Cloud Ribbon & Hystrix

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,15 @@
         <module>service1</module>
         <module>client</module>
         <module>cloud_config</module>
+        <module>cloud_hystrix</module>
     </modules>
+
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
