--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: client
+    name: service-ribbon
 
 eureka:
   instance:
@@ -12,5 +12,6 @@ eureka:
   client:
     service-url:
      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
-
-
+feign:
+  hystrix:
+    enabled: true
