--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
         <module>service1</module>
         <module>client</module>
         <module>cloud_config</module>
-        <module>cloud_hystrix</module>
+        <module>cloud_zuul</module>
     </modules>
 
+    <description>Spring Cloud</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
