--- a/service0/pom.xml
+++ b/service0/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service_0</artifactId>
+    <description>Spring Cloud Eureka Client</description>
 
     <dependencies>
         <dependency>
