--- a/cloud_config/src/main/resources/application.yml
+++ b/cloud_config/src/main/resources/application.yml
@@ -11,5 +11,5 @@ spring:
         git:
           uri: https://github.com/zomin/spring_cloud_demo    # \u914D\u7F6Egit\u4ED3\u5E93\u7684\u5730\u5740
           search-paths: config-repo                          # git\u4ED3\u5E93\u5730\u5740\u4E0B\u7684\u76F8\u5BF9\u5730\u5740\uFF0C\u53EF\u4EE5\u914D\u7F6E\u591A\u4E2A\uFF0C\u7528,\u5206\u5272\u3002
-          username: kalend_1227@163.com                      # git\u4ED3\u5E93\u7684\u8D26\u53F7
-          password: kalend%1227                              # git\u4ED3\u5E93\u7684\u5BC6\u7801
+          username: *******                     # git\u4ED3\u5E93\u7684\u8D26\u53F7
+          password: *******                              # git\u4ED3\u5E93\u7684\u5BC6\u7801
